<resources>
    <string name="app_name">Password Genrator</string>
    <string name="generate">Generate</string>
    <string name="settings">Settings</string>
    <string name="password">Password</string>
    <string name="upper_case">Upper-case Character</string>
    <string name="lower_case">Lower-case Character</string>
    <string name="includes_numbers">Numbers</string>
    <string name="includes_special_characters">Special Characters</string>
    <string name="max_length">Max Length</string>
</resources>